# bench

./: .gitignore  .gitmodules  AUDIT_Adaptive_KNet.md  AUDIT_KalmanNet_TSP.md  DECISIONS.md  FAIRNESS.md  HANDOFF_PACKET.v3  KalmanNet_Family_Tasks_for_Benchmark.md  METRICS.md  README.md  USERGUIDE.md  pyproject.toml  run_all_sweeps_and_make_plots.sh
bench/: init.py
bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: README.md  adaptive_knet.Dockerfile  kalmannet_tsp.Dockerfile  maml_knet.Dockerfile  my_model.Dockerfile  split_knet.Dockerfile
docs/: GENERATOR_CONTRACT_V1.md  RUN_DIR.md  S7_DETERMINISM_AND_CI.md  TG7_DATASET_LOADERS.md
reports/: aggregate_all_simple_paperlike.csv  aggregate_all_simple_tiny.csv  aggregate_basic.csv  aggregate_fig5a_overlay_smoke.csv  aggregate_shift.csv  failure_by_plan_fig5a_knet_vs_kf_real.csv  failure_by_plan_linear_multimodel_compare.csv  failure_by_plan_plan_matrix_smoke.csv  fig5a_points_all_simple_tiny.csv  fig5a_points_fig5a_knet_vs_kf_real.csv  fig5a_points_gpu_models_smoke.csv  ops_by_plan_fig5a_knet_vs_kf_real.csv  ops_by_plan_fig5a_overlay_smoke.csv  ops_by_plan_plan_matrix_smoke.csv  plan_compare_fig5a_knet_vs_kf_real.csv  summary_adapt_smoke.csv  summary_adapt_smoke_overflow.csv  summary_all_simple.csv  summary_all_simple_paperlike.csv  summary_all_simple_tiny.csv  summary_all_simple_tiny_detailed.csv  summary_basic.csv  summary_cache_smoke.csv  summary_fig5a_knet_vs_kf.csv  summary_fig5a_overlay_smoke.csv  summary_full_compare.csv  summary_kf_baseline_smoke.csv  summary_maml_train_smoke.csv  summary_shift.csv  (+3 more)
(+8506 files in other folders)
